--- a/ElectronicTextbook.Web/Views/Lectures/Delete.cshtml
+++ b/ElectronicTextbook.Web/Views/Lectures/Delete.cshtml
@@ -1,10 +1,12 @@
-﻿ @model ElectronicTextbook.Web.ViewModels.LectureViewModel
+﻿@model ElectronicTextbook.Web.ViewModels.LectureViewModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Delete";
 }
 
-<h1>Details</h1>
+<h1>Delete</h1>
+
+<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Lecture</h4>
     <hr />
@@ -43,8 +45,10 @@
             </dd>
         }
     </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+
+    <form asp-action="Delete">
+        <input type="hidden" asp-for="Id" />
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <a asp-action="Index">Back to List</a>
+    </form>
 </div>
