--- a/ElectronicTextbook.Web/Views/Shared/_LoginPartial.cshtml
+++ b/ElectronicTextbook.Web/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,7 @@
     @if (SignInManager.IsSignedIn(User))
     {
         <li class="nav-item">
-            <a class="nav-link text-dark" title="Manage">Hello @User.Identity.Name!</a>
+            <a class="nav-link text-dark" title="Manage">Здравствуй @User.Identity.Name!</a>
         </li>
         <li class="nav-item">
             <form class="form-inline" asp-area="" asp-controller="Account" asp-action="Logout" method="post">
@@ -18,10 +18,10 @@
     else
     {
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
+            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">Регистрация</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
+            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Авторизация</a>
         </li>
     }
 </ul>
